@startuml
abstract class Snack {
}

abstract class Drink {
}

class MandN {
  -name: str
  -price: int
  __
  +__init__()
  .. Name Getter ..
  +name(): name
  .. Price Getter ..
  +price(): price
}

class Scootles {
  -name: str
  -price: int
  __
  +__init__()
  .. Name Getter ..
  +name(): name
  .. Price Getter ..
  +price(): price
}

class MrPepper {
  -name: str
  -price: int
  __
  +__init__()
  .. Name Getter ..
  +name(): name
  .. Price Getter ..
  +price(): price
}

class Brite {
  -name: str
  -price: int
  __
  +__init__()
  .. Name Getter ..
  +name(): name
  .. Price Getter ..
  +price(): price
}

class Stock {
  +goods: list
  +goods_list: [MandN(), Scootles(), MrPepper(), Brite()]
  +__init__()
  +generate_stock(): goods[]
}

class User {
  -balance: int
  -items: list
  +__init__()
  __
  +buy_item(item: obj)
  .. Balance Getter ..
  +get_balance(): balance
  .. Items Getter ..
  +get_items(): items
}

class Menu {
  {static} store_run(): string
}

MandN --|> Snack
Scootles --|> Snack
MrPepper --|> Drink
Brite --|> Drink

Stock *-- MandN
Stock *-- Scootles
Stock *-- MrPepper
Stock *-- Brite


@enduml